# invariant_kalman_filter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: Sanitizers.cmake  StaticAnalyzers.cmake
include/: ekf.h  ekf_node.h  ekf_types.h  iekf.h  iekf_node.h  iekf_tf2_conversions.h  iekf_types.h  kalman_node.h  lie_group.h  measurement.h  mekf.h  mekf_types.h  mocap_model.h  ros_utils.h
include/kalman_filter/: gps_model.h  iekf.h  imu_model.h  mekf.h  mocap_model.h
include/kalman_node/: kalman_node.h  measurement.h
launch/: localisation.launch
src/: ekf.cpp  ekf_node.cpp  iekf.cpp  iekf_node.cpp  kalman_node.cpp  lie_group.cpp  measurement.cpp  mekf.cpp  mocap_model.cpp
src/kalman_filter/: gps_model.cpp  iekf.cpp  imu_model.cpp  mekf.cpp  mocap_model.cpp
src/kalman_node/: kalman_node.cpp  measurement.cpp  ros_utils.h
test/: CMakeLists.txt  pose_compare.py  record_localisation_bag.launch  test_filter.launch
test/data/: rotation360_30s.bag  rotation90_30s.bag  stationary_30s.bag
test/include/: accuracy_test.h  accuracy_test_config.h  angular_trajectory.h  bezier.h  csv_helpers.h  imu_sensor_model.h  linear_trajectory.h  mocap_sensor_model.h  mock_trajectory_node.h  offset_generator.h  rosbag_helpers.h  test_filters.h  test_trajectories.h  trajectory.h
test/include/sensor_models/: gps_sensor_model.h  imu_sensor_model.h  mocap_sensor_model.h  sensor_event.h  virtual_sensor.h
test/scripts/: build_tests  create_regression_test_report  load_csv.py  plot_results.py  print_rmse_table.py  result_comparator.py  run_tests  save_figures
test/src/: accuracy_test.cpp  accuracy_test_config.cpp  angular_trajectory.cpp  create_csv_data.cpp  create_rosbag_data.cpp  csv_helpers.cpp  generate_data.cpp  imu_sensor_model.cpp  linear_trajectory.cpp  mocap_sensor_model.cpp  mock_trajectory_node.cpp  offset_generator.cpp  regression_tests.cpp  ros_trajectory_test.cpp  rosbag_helpers.cpp  test_filters.cpp  test_main.cpp  test_trajectories.cpp
test/src/sensor_models/: gps_sensor_model.cpp  imu_sensor_model.cpp  mocap_sensor_model.cpp  sensor_event.cpp  virtual_sensor.cpp
